--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Settings</title>
+        <meta name="dialog-show-close-button" content="true">
+        <meta name="dialog-prefered-width" content="900">
         <style>
             button.ball {
                 width: 64px;
