--- a/dialogs/about.html
+++ b/dialogs/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-
+        <meta name="dialog-show-close-button" content="true">
         <style>
             h3.app-name {
                 margin: 8px 0 4px 0;
