--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <meta name="dialog-show-close-button" content="false">
+    <meta name="dialog-big" content="true">
+    <meta name="dialog-animate" content="false">
+    <meta name="dialog-show-bg" content="false">
+
     <link rel="stylesheet" href="style/landing.css">
 
     <style>
