separated landing page from app
the website was taking more than 6s to load for the first time, so the landing page was separated from the main app for better loadtimes

--- a/dialogs/about.html
+++ b/dialogs/about.html
@@ -58,7 +58,7 @@
         <div class="settings-body" id="settingsBody">
             <!-- MAIN -->
             <div class="page active" id="page-main">
-                <div class="setting top bottom" style="cursor: pointer" onclick="showLandingPage()">
+                <div class="setting top bottom" style="cursor: pointer" onclick="window.open('index.html', '_self')">
                     <span class="switch-text" data-locale="dialogs.about.main.landing-page">Landing page</span>
                     <button class="icon-button">open_in_new</button>
                 </div>
