--- a/dialogs/macros.html
+++ b/dialogs/macros.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
     <title>Macros</title>
+
+    <meta name="dialog-show-close-button" content="true">
+    <meta name="dialog-prefered-width" content="800">
+    <meta name="dialog-toolbar-left" content="<button class='icon-button' onclick='createMacro()' translate='no' title='Create macro' data-locale-attr='title:dialog.macros.header.create-macro'>add</button>
+                <button class='icon-button' onclick='importMacro()' translate='no' title='Import macro' data-locale-attr='title:dialog.macros.header.import-macro'>folder_open</button>">
+    <meta name="<div class='dropdown'>
+                    <button class='icon-button' onmousedown='toggleDropdown(`macros-more-menu`)' translate='no' title='More options' data-locale-attr='title:generic.more-menu'>more_vert</button>
+                    <div class='dropdown-content menu' id='macros-more-menu'>
+                        <button class='text-button' onclick='window.open(`https://github.com/flarom/cohesion/wiki/Scripting`)' data-locale='dialog.macros.header.about-scripting'>About scripting</button>
+                    </div>
+                </div>">
+
     <style>
         .macro-container {
             min-height: 200px;
