--- a/app.html
+++ b/app.html
@@ -168,7 +168,7 @@
                         <button class="text-button" onmouseup="window.open('https://github.com/flarom/cohesion/wiki'); hideAllMenus()" data-locale="app.toolbar.more-menu.help">Help</button>
                         <button class="text-button" onmouseup="showCheatSheet();" data-locale="app.toolbar.more-menu.markdown-cheat-sheet">Markdown Cheat Sheet</button>
                         <button class="text-button" onmouseup="closeAllDialogs(); showMessageFromFile('dialogs/shortcuts.html'); hideAllMenus();">
-                            Keyboard shortcuts
+                            <span data-locale="app.toolbar.more-menu.keyboard-shortcuts">Keyboard shortcuts</span>
                             <kbd>Ctrl+?</kbd>
                         </button>
                         <button class="text-button" onmouseup="closeAllDialogs(); showMessageFromFile('dialogs/about.html'); hideAllMenus();">
