--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -490,7 +490,7 @@
             function editEditorMeta() {
                 const defaultMeta = 
 `title:       ~{1:\${getFileTitle(index) || "New document"}}
-project:     ~{2:Documents}
+project:     ~{2:New project}
 description: ~{3:No description provided}
 tags:        ~{4:Uncategorized}
 author:      ~{5:Author name}
