--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
     <link rel="stylesheet" href="style/prompts.css">
 
     <style>
-        *::selection {
-            background-color: var(--selection-color);
-            color: var(--button-color-2);
-        }
-
         .highlight {
             padding: 0 0px 0px 10px;
             border-radius: 12px;
@@ -137,8 +132,107 @@
     </section>
 
     <section class="normal" id="features">
-        <h2 data-locale="dialogs.landing.features">Features</h2>
-        <div class="feature-container left">
+        <div class="features-grid">
+            <div class="feature-container row feature-a">
+                <div>
+                    <span class="icon" translate="no">keyboard_keys</span>
+                </div>
+                <div>
+                    <h3>
+                        Keyboard centric design
+                    </h3>
+                    <p>
+                        Write complex documents without taking your hands out of the keyboard.
+                    </p>
+                </div>
+            </div>
+
+            <div class="feature-container feature-b">
+                <span class="icon" translate="no">vpn_lock_2</span>
+                <div>
+                    <h3>In-browser local storage</h3>
+                    <p>Your files are not sent to us, Cohesion saves your files in your browser data.</p>
+                    <p>You can also create backups of all your data in a single click.</p>
+                </div>
+            </div>
+
+            <div class="feature-container feature-c">
+                <h2>Export as</h2>
+                <div style="display: flex; justify-content: space-around; width: 100%;">
+                    <div style="display: flex; flex-direction: column; align-items: center;">
+                        <img src="cohesion/file-icons/text-x-markdown.svg" alt="">
+                        Markdown
+                    </div>
+                    <div style="display: flex; flex-direction: column; align-items: center;">
+                        <img src="cohesion/file-icons/application-pdf.svg" alt="">
+                        PDF
+                    </div>
+                    <div style="display: flex; flex-direction: column; align-items: center;">
+                        <img src="cohesion/file-icons/text-html.svg" alt="">
+                        HTML
+                    </div>
+                </div>
+            </div>
+
+            <div class="feature-container feature-d">
+                <div style="padding: 16px;">
+                    <h2>The way you like</h2>
+                    <p>Personalize your editor with themes or even your own CSS.</p>
+                </div>
+                <img src="cohesion/landing/themes-scrnshot.png" alt="">
+            </div>
+
+            <div class="feature-container feature-e">
+                <div>
+                    <h2>Instant search</h2>
+                    <p>Quickly find any piece of text using the built-in instant search, streamlining your workflow.</p>
+                </div>
+            </div>
+
+            <div class="feature-container feature-h">
+                <div>
+                    <h2>Ideas organize themselves</h2>
+                    <p>Organize your Markdown files with projects, tags and metadata.</p>
+                </div>
+            </div>
+            
+            <div class="feature-container feature-i">
+
+            </div>
+
+            <div class="feature-container feature-j">
+
+            </div>
+
+            <div class="feature-container feature-f">
+                <h1>Free & Open Source</h1>
+                <svg viewBox="0 0 100 150">
+                    <defs>
+                    <radialGradient id="Gradient1" cx="50%" cy="50%" fx="0.441602%" fy="50%" r=".5"><animate attributeName="fx" dur="34s" values="0%;3%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(255, 0, 255, 1)"></stop><stop offset="100%" stop-color="rgba(255, 0, 255, 0)"></stop></radialGradient>
+                    <radialGradient id="Gradient2" cx="50%" cy="50%" fx="2.68147%" fy="50%" r=".5"><animate attributeName="fx" dur="23.5s" values="0%;3%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(255, 255, 0, 1)"></stop><stop offset="100%" stop-color="rgba(255, 255, 0, 0)"></stop></radialGradient>
+                    <radialGradient id="Gradient3" cx="50%" cy="50%" fx="0.836536%" fy="50%" r=".5"><animate attributeName="fx" dur="21.5s" values="0%;3%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(0, 255, 255, 1)"></stop><stop offset="100%" stop-color="rgba(0, 255, 255, 0)"></stop></radialGradient>
+                    <radialGradient id="Gradient4" cx="50%" cy="50%" fx="4.56417%" fy="50%" r=".5"><animate attributeName="fx" dur="23s" values="0%;5%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(0, 255, 0, 1)"></stop><stop offset="100%" stop-color="rgba(0, 255, 0, 0)"></stop></radialGradient>
+                    <radialGradient id="Gradient5" cx="50%" cy="50%" fx="2.65405%" fy="50%" r=".5"><animate attributeName="fx" dur="24.5s" values="0%;5%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(0,0,255, 1)"></stop><stop offset="100%" stop-color="rgba(0,0,255, 0)"></stop></radialGradient>
+                    <radialGradient id="Gradient6" cx="50%" cy="50%" fx="0.981338%" fy="50%" r=".5"><animate attributeName="fx" dur="25.5s" values="0%;5%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(255,0,0, 1)"></stop><stop offset="100%" stop-color="rgba(255,0,0, 0)"></stop></radialGradient>
+                    </defs>
+                    <rect x="13.744%" y="1.18473%" width="100%" height="100%" fill="url(#Gradient1)" transform="rotate(334.41 50 50)"><animate attributeName="x" dur="20s" values="25%;0%;25%" repeatCount="indefinite"></animate><animate attributeName="y" dur="21s" values="0%;25%;0%" repeatCount="indefinite"></animate><animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="7s" repeatCount="indefinite"></animateTransform></rect>
+                    <rect x="-2.17916%" y="35.4267%" width="100%" height="100%" fill="url(#Gradient2)" transform="rotate(255.072 50 50)"><animate attributeName="x" dur="23s" values="-25%;0%;-25%" repeatCount="indefinite"></animate><animate attributeName="y" dur="24s" values="0%;50%;0%" repeatCount="indefinite"></animate><animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="12s" repeatCount="indefinite"></animateTransform>
+                    </rect>
+                    <rect x="9.00483%" y="14.5733%" width="100%" height="100%" fill="url(#Gradient3)" transform="rotate(139.903 50 50)"><animate attributeName="x" dur="25s" values="0%;25%;0%" repeatCount="indefinite"></animate><animate attributeName="y" dur="12s" values="0%;25%;0%" repeatCount="indefinite"></animate><animateTransform attributeName="transform" type="rotate" from="360 50 50" to="0 50 50" dur="9s" repeatCount="indefinite"></animateTransform>
+                    </rect>
+                </svg>
+                <button class="text-button" onclick="window.open('https://github.com/flarom/cohesion'), '_blank'">Source code</button>
+            </div>
+
+            <div class="feature-container feature-g">
+                <div style="display: flex; flex-direction: column; justify-content: center;">
+                    <h1>Completely zen</h1>
+                    <p>Write without any distractions. You don't have to create an account, sign a monthly subscription, watch ads, or train AI.</p>
+                    <p>It's just a text editor.</p>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="feature-container left">
             <img src="cohesion/landing/markdown.png" alt="">
             <div class="feature-container-text">
                 <h3 data-locale="dialogs.landing.features.markdown-based">Markdown-Based</h3>
@@ -179,7 +273,7 @@
                 <h3 data-locale="dialogs.landing.features.distraction-free-editor">Distraction-free editor</h3>
                 <p data-locale="dialogs.landing.features.distraction-free-editor.description">Write without any distractions. You don't have to create an account, sign a monthly subscription, watch ads, or train AI. It's a text editor!</p>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <section class="filler">
