translated landing page

--- a/index.html
+++ b/index.html
@@ -138,26 +138,22 @@
                     <span class="icon" translate="no">keyboard_keys</span>
                 </div>
                 <div>
-                    <h3>
-                        Keyboard centric design
-                    </h3>
-                    <p>
-                        Write complex documents without taking your hands out of the keyboard.
-                    </p>
+                    <h3 data-locale="dialogs.landing.features.keyboard-centric-design">Keyboard centric design</h3>
+                    <p data-locale="dialogs.landing.features.keyboard-centric-design.paragraph">Write complex documents without taking your hands out of the keyboard.</p>
                 </div>
             </div>
 
             <div class="feature-container feature-b">
                 <span class="icon" translate="no">vpn_lock_2</span>
                 <div>
-                    <h3>In-browser local storage</h3>
-                    <p>Your files are not sent to us, Cohesion saves your files in your browser data.</p>
-                    <p>You can also create backups of all your data in a single click.</p>
+                    <h3 data-locale="dialogs.landing.features.in-browser-local-storage">In-browser local storage</h3>
+                    <p data-locale="dialogs.landing.features.in-browser-local-storage.paragraph-1">Your files are not sent to us, Cohesion saves your files in your browser data.</p>
+                    <p data-locale="dialogs.landing.features.in-browser-local-storage.paragraph-2">You can also create backups of all your data in a single click.</p>
                 </div>
             </div>
 
             <div class="feature-container feature-c">
-                <h2>Export as</h2>
+                <h2 data-locale="dialogs.landing.features.export-as">Export as</h2>
                 <div style="display: flex; justify-content: space-around; width: 100%;">
                     <div style="display: flex; flex-direction: column; align-items: center;">
                         <img src="cohesion/file-icons/text-x-markdown.svg" alt="">
@@ -176,36 +172,28 @@
 
             <div class="feature-container feature-d">
                 <div style="padding: 16px;">
-                    <h2>The way you like</h2>
-                    <p>Personalize your editor with themes or even your own CSS.</p>
+                    <h2 data-locale="dialogs.landing.features.the-way-you-like">The way you like</h2>
+                    <p data-locale="dialogs.landing.features.the-way-you-like.paragraph">Personalize your editor with themes or even your own CSS.</p>
                 </div>
                 <img src="cohesion/landing/themes-scrnshot.png" alt="">
             </div>
 
             <div class="feature-container feature-e">
                 <div>
-                    <h2>Instant search</h2>
-                    <p>Quickly find any piece of text using the built-in instant search, streamlining your workflow.</p>
+                    <h2 data-locale="dialogs.landing.features.instant-search">Instant search</h2>
+                    <p data-locale="dialogs.landing.features.instant-search.paragraph">Quickly find any piece of text using the built-in instant search, streamlining your workflow.</p>
                 </div>
             </div>
 
             <div class="feature-container feature-h">
                 <div>
-                    <h2>Ideas organize themselves</h2>
-                    <p>Organize your Markdown files with projects, tags and metadata.</p>
+                    <h2 data-locale="dialogs.landing.features.ideas-organize-themselves">Ideas organize themselves</h2>
+                    <p data-locale="dialogs.landing.features.ideas-organize-themselves.paragraph">Organize your Markdown files with projects, tags and metadata.</p>
                 </div>
-            </div>
-            
-            <div class="feature-container feature-i">
-
-            </div>
-
-            <div class="feature-container feature-j">
-
             </div>
 
             <div class="feature-container feature-f">
-                <h1>Free & Open Source</h1>
+                <h1 data-locale="dialogs.landing.features.free-and-opensource">Free & Open Source</h1>
                 <svg viewBox="0 0 100 150">
                     <defs>
                     <radialGradient id="Gradient1" cx="50%" cy="50%" fx="0.441602%" fy="50%" r=".5"><animate attributeName="fx" dur="34s" values="0%;3%;0%" repeatCount="indefinite"></animate><stop offset="0%" stop-color="rgba(255, 0, 255, 1)"></stop><stop offset="100%" stop-color="rgba(255, 0, 255, 0)"></stop></radialGradient>
@@ -221,59 +209,17 @@
                     <rect x="9.00483%" y="14.5733%" width="100%" height="100%" fill="url(#Gradient3)" transform="rotate(139.903 50 50)"><animate attributeName="x" dur="25s" values="0%;25%;0%" repeatCount="indefinite"></animate><animate attributeName="y" dur="12s" values="0%;25%;0%" repeatCount="indefinite"></animate><animateTransform attributeName="transform" type="rotate" from="360 50 50" to="0 50 50" dur="9s" repeatCount="indefinite"></animateTransform>
                     </rect>
                 </svg>
-                <button class="text-button" onclick="window.open('https://github.com/flarom/cohesion'), '_blank'">Source code</button>
+                <button class="text-button" onclick="window.open('https://github.com/flarom/cohesion'), '_blank'" data-locale="dialogs.landing.features.free-and-opensource.source-code">Source code</button>
             </div>
 
             <div class="feature-container feature-g">
                 <div style="display: flex; flex-direction: column; justify-content: center;">
-                    <h1>Completely zen</h1>
-                    <p>Write without any distractions. You don't have to create an account, sign a monthly subscription, watch ads, or train AI.</p>
-                    <p>It's just a text editor.</p>
+                    <h1 data-locale="dialogs.landing.features.completely-zen">Completely zen</h1>
+                    <p data-locale="dialogs.landing.features.completely-zen.paragraph-1">Write without any distractions. You don't have to create an account, sign a monthly subscription, watch ads, or train AI.</p>
+                    <p data-locale="dialogs.landing.features.completely-zen.paragraph-2">It's just a text editor.</p>
                 </div>
             </div>
         </div>
-        <!-- <div class="feature-container left">
-            <img src="cohesion/landing/markdown.png" alt="">
-            <div class="feature-container-text">
-                <h3 data-locale="dialogs.landing.features.markdown-based">Markdown-Based</h3>
-                <p data-locale="dialogs.landing.features.markdown-based.description">Write complex documents without taking your hands out of the keyboard.</p>
-            </div>
-        </div>
-        <div class="feature-container right">
-            <img src="cohesion/landing/storage.png" alt="">
-            <div class="feature-container-text">
-                <h3 data-locale="dialogs.landing.features.in-browser-local-storage">In-browser local storage</h3>
-                <p data-locale="dialogs.landing.features.in-browser-local-storage.description">Your files are not sent to us, Cohesion saves your files in your browser data, you can also create backups of all your data in one single click.</p>
-            </div>
-        </div>
-        <div class="feature-container left">
-            <img src="cohesion/landing/themes.png" alt="">
-            <div class="feature-container-text">
-                <h3 data-locale="dialogs.landing.features.themes">Themes</h3>
-                <p data-locale="dialogs.landing.features.themes.description">Personalize your experience with 8 themes. Switch between light and dark modes, or choose from unique palettes to make your writing environment more comfortable and inspiring.</p>
-            </div>
-        </div>
-        <div class="feature-container right">
-            <img src="cohesion/landing/export.png" alt="">
-            <div class="feature-container-text">
-                <h3 data-locale="dialogs.landing.features.easy-export">Easy export</h3>
-                <p data-locale="dialogs.landing.features.easy-export.description">Export your notes to formats like PDF, HTML, or Markdown with just one click.</p>
-            </div>
-        </div>
-        <div class="feature-container left">
-            <img src="cohesion/landing/search.png" alt="">
-            <div class="feature-container-text">
-                <h3 data-locale="dialogs.landing.features.instant-search">Instant search</h3>
-                <p data-locale="dialogs.landing.features.instant-search.description">Quickly find any note or piece of text using the built-in instant search, streamlining your workflow.</p>
-            </div>
-        </div>
-        <div class="feature-container right">
-            <img src="cohesion/landing/distraction.png" alt="">
-            <div class="feature-container-text">
-                <h3 data-locale="dialogs.landing.features.distraction-free-editor">Distraction-free editor</h3>
-                <p data-locale="dialogs.landing.features.distraction-free-editor.description">Write without any distractions. You don't have to create an account, sign a monthly subscription, watch ads, or train AI. It's a text editor!</p>
-            </div>
-        </div> -->
     </section>
 
     <section class="filler">
